cabal-version:      3.0
name:               HaskellProblems
version:            0.1.0.0
synopsis:

extra-source-files:
    README.md

common base
  build-depends:       base >=4.14 && <5

common deps
  ghc-options:  -Wall        
                -- -Werror        
                -fno-warn-incomplete-uni-patterns
                -Wincomplete-patterns             
                -Wincomplete-uni-patterns 
                -Wincomplete-record-updates 
                -Wmissing-fields   
                -Wunused-top-binds
                -Wunused-local-binds
                -Wunused-pattern-binds
                -- -Wunused-matches
                -Wunused-do-bind
                -- -Wunused-type-patterns
                -Wunused-foralls
                -Wunused-record-wildcards
                -Wredundant-record-wildcards
                -- -Wunused-packages
 
library WikiProblems-lib
    import: base
    import: deps
    exposed-modules: WikiQuestions.Problem1
                     , WikiQuestions.Problem9
                     , WikiQuestions.Problems
                     , WikiQuestions.Problem61
                     , WikiQuestions.Problem61A
                     , WikiQuestions.Problem62
                     , WikiQuestions.Problem62B
                     , WikiQuestions.Problem64
                     , WikiQuestions.WikiTypes

    build-depends:    containers
                      , extra
                      , lens                      
                      , mtl
                      , text
                      , protolude
                      , transformers
                      , aeson
                      , lens-aeson
                      , raw-strings-qq
                      , generic-lens
                      , generic-lens-core                                           
                      , these
                      , time
                      , hspec
                      , QuickCheck
                      , parsec
                      , parsec-numbers
                      , parsec-numeric
                      , ilist 
                      , either  
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
              -Wall 
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields     

library LeetProblems-lib
    import: base
    import: deps
    exposed-modules: 
                       LeetCode.Prob1TwoSum
                     , LeetCode.Prob3LengthOfLongestSubstring
                     , LeetCode.Prob91DecodeWays
                     , LeetCode.Prob62UniquePaths

    build-depends:    containers
                      , extra
                      , lens                      
                      , mtl
                      , text
                      , protolude
                      , transformers
                      , aeson
                      , lens-aeson
                      , raw-strings-qq
                      , generic-lens
                      , generic-lens-core                                           
                      , these
                      , time
                      , hspec
                      , QuickCheck
                      , parsec
                      , parsec-numbers
                      , parsec-numeric
                      , ilist   
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
              -Wall 
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields     


library InterviewProblems-lib
    import: base
    import: deps
    exposed-modules: 
                       InterviewQuestions.TreeWalker2
                       InterviewQuestions.TransactionOptimizer
                       InterviewQuestions.TransactionOptimizer2
                       InterviewQuestions.CustomList
                       InterviewQuestions.JsonSchemaValidation
                       InterviewQuestions.TreeZipper2

    build-depends:    containers
                      , extra
                      , lens                      
                      , mtl
                      , text
                      , protolude
                      , transformers
                      , aeson
                      , lens-aeson
                      , raw-strings-qq
                      , generic-lens
                      , generic-lens-core                                           
                      , these
                      , time
                      , hspec
                      , QuickCheck
                      , parsec
                      , parsec-numbers
                      , parsec-numeric
                      , ilist  
                      , either 
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
              -Wall 
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields     

library GeekProblems-lib
    import: base
    import: deps
    exposed-modules: 
                       GeeksForGeeksProblems.Types
                       GeeksForGeeksProblems.Level1_1
                       GeeksForGeeksProblems.Level1_2
                       GeeksForGeeksProblems.Level1_3
                       GeeksForGeeksProblems.Level1_4
                       GeeksForGeeksProblems.Level1_7
                       GeeksForGeeksProblems.Level1_8
                       GeeksForGeeksProblems.Level2_21



    build-depends:    containers
                      , extra
                      , lens                      
                      , mtl
                      , text
                      , protolude
                      , transformers
                      , aeson
                      , lens-aeson
                      , raw-strings-qq
                      , generic-lens
                      , generic-lens-core                                           
                      , these
                      , time
                      , hspec
                      , QuickCheck
                      , parsec
                      , parsec-numbers
                      , parsec-numeric
                      , ilist   
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: 
              -Wall 
              -fno-warn-incomplete-uni-patterns
              -Wincomplete-patterns             
              -Wincomplete-uni-patterns 
              -Wincomplete-record-updates 
              -Wmissing-fields     




test-suite Problems-test
    import: base
    import: deps
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    ghc-options:  -main-is Spec
    other-modules:
      Spec.WikiQuestions.Wiki 
      Spec.LeetProblems.Leet
      Spec.GeekProblems.GeekSpec
    build-depends:   WikiProblems-lib
                     , LeetProblems-lib
                     , GeekProblems-lib
                     , tasty                  
                     , tasty-expected-failure
                     , hedgehog               
                     , tasty-hedgehog    
                     , tasty-quickcheck   
                     , hspec
                     , containers
                     , tasty-hunit
                     , smallcheck  